# ╔══════════════════════════════════════════════════════════════════════════╗
# ║  Skia GN args — macOS / arm64 + x86_64 / static / official               ║
# ╠══════════════════════════════════════════════════════════════════════════╣
# ║  This config produces the prebuilt drop consumed by CMakeLists.txt at    ║
# ║  the repo root via external/prebuilt/skia. Because is_component_build is ║
# ║  false, every Skia module compiles to its own static .a alongside        ║
# ║  libskia.a — they do NOT get merged. The packaging step that produces    ║
# ║  skia-prebuilt-binary.zip MUST therefore include each of:                ║
# ║                                                                          ║
# ║      out/<cfg>/libskia.a              (always)                           ║
# ║      out/<cfg>/libsvg.a               (skia_enable_svg)                  ║
# ║      out/<cfg>/libskshaper.a          (skia_enable_skshaper)             ║
# ║      out/<cfg>/libskunicode.a         (skia_enable_skunicode)            ║
# ║      out/<cfg>/libskresources.a       (transitive: svg, skottie)         ║
# ║      out/<cfg>/libskottie.a           (skia_enable_skottie, optional)    ║
# ║      out/<cfg>/libskcms.a             (always)                           ║
# ║      out/<cfg>/libexpat.a             (skia_use_expat, used by SVG XML)  ║
# ║      out/<cfg>/libpng.a               (skia_use_libpng_decode/encode)    ║
# ║      out/<cfg>/libjpeg.a              (skia_use_libjpeg_turbo_*)         ║
# ║      out/<cfg>/libwebp.a              (skia_use_libwebp_*)               ║
# ║      out/<cfg>/libz.a                 (skia_use_zlib)                    ║
# ║      out/<cfg>/libwuffs.a             (skia_use_wuffs)                   ║
# ║      out/<cfg>/libharfbuzz.a          (skia_use_harfbuzz, vendored)      ║
# ║      out/<cfg>/libicu.a               (skia_use_icu, vendored)           ║
# ║                                                                          ║
# ║  Downstream frameworks the consumer must link against on macOS:          ║
# ║      -framework CoreFoundation       (always)                            ║
# ║      -framework CoreGraphics         (always)                            ║
# ║      -framework CoreText             (skia_use_fonthost_mac)             ║
# ║      -framework ApplicationServices  (skia_use_fonthost_mac, AppKit)     ║
# ║      -framework Metal                (skia_use_metal)                    ║
# ║      -framework MetalKit             (skia_use_metal)                    ║
# ║      -framework Foundation           (always)                            ║
# ║                                                                          ║
# ║  Build BOTH arm64 and x86_64 slices and lipo them into a universal .a    ║
# ║  in the packaging step. Two GN out dirs (one per arch) — see comments    ║
# ║  near `target_cpu` below.                                                ║
# ║                                                                          ║
# ║  Until the packaging step picks up libsvg.a + libskshaper.a + libskunicode.a║
# ║  the consumer CMakeLists.txt compiles the SVG/skshaper sources in-tree.  ║
# ║  Once the next prebuilt drop ships those libs, that workaround can be    ║
# ║  removed and AureliaKit_GraphicInterface can simply link against them.   ║
# ╚══════════════════════════════════════════════════════════════════════════╝

# --- Compiler & Toolchain ---
is_clang = true                            # Apple clang from Xcode CLT
use_lld  = false                           # use Apple ld64 / ld-prime

# --- Architecture ---
# Set this from the packaging script per slice:
#   gn gen out/macos-arm64  --args='target_cpu="arm64"  ...'
#   gn gen out/macos-x64    --args='target_cpu="x64"    ...'
# Then `lipo -create out/macos-arm64/libskia.a out/macos-x64/libskia.a -output libskia.a`.
target_cpu = "arm64"

# --- SDK / deployment target ---
# Pin the deployment target so the resulting archives are usable on a wide
# range of macOS hosts. Bump as needed; matches Skia's own minimums.
mac_deployment_target = "11.0"             # Big Sur

# --- Build ---
is_debug = false
is_official_build = true
is_component_build = false                 # static libs (.a), not .dylib
skia_enable_optimize_size = false
# -fPIC is implicit on Darwin, but mark visibility-hidden so the consumer
# .dylib does not re-export every Skia symbol.
extra_cflags = [ "-fvisibility=hidden", "-fvisibility-inlines-hidden" ]
extra_cflags_cc = [ "-fno-rtti" ]

# --- Backends ---
# macOS desktop: Metal first-class; GL is deprecated by Apple but still works.
# No DirectWrite, no D3D. Vulkan via MoltenVK is possible but disabled here
# to keep the drop small; flip on if AureliaKit ever wants Vulkan on Mac.
skia_enable_gpu      = true
skia_use_metal       = true
skia_use_gl          = false
skia_use_vulkan      = false
skia_use_direct3d    = false
skia_use_directwrite = false

# --- Fonts ---
# CoreText handles font enumeration + shaping fallback on macOS; no freetype
# / fontconfig. `skia_use_fonthost_mac` defaults true on is_mac, set explicit.
skia_use_fonthost_mac = true
skia_use_freetype     = false
skia_use_fontconfig   = false

# --- Modules ---
# These each produce a separate .a that must be packaged into the zip.
skia_enable_svg        = true              # → libsvg.a
skia_enable_skshaper   = true              # → libskshaper.a
skia_enable_skunicode  = true              # → libskunicode.a (needed by svg text)
skia_enable_skottie    = true              # → libskottie.a

# --- Text shaping / unicode dependencies ---
# CoreText already provides shaping, but harfbuzz keeps SVG <text> rendering
# byte-identical with the Windows / Linux drops. Both vendored.
skia_use_harfbuzz   = true
skia_use_icu        = true
skia_use_bidi       = false                # set true if RTL SVG text is needed
skia_use_sfntly     = false

# --- Disabled features ---
skia_enable_pdf = false

# --- Third-party (vendored, not system) ---
# Mirror the Windows drop: ship pinned/vendored copies so consumers never need
# Homebrew / MacPorts packages (no version skew across CI runners or users).
skia_use_expat                  = true     # required by SVG XML parser
skia_use_system_harfbuzz        = false
skia_use_system_libjpeg_turbo   = false
skia_use_system_libpng          = false
skia_use_system_libwebp         = false
skia_use_system_zlib            = false
skia_use_system_icu             = false
skia_use_system_expat           = false
