# --- Compiler & Toolchain ---
is_clang = false
use_lld = false
win_vc = "C:/Program Files/Microsoft Visual Studio/18/Community/VC"

# --- Build ---
is_debug = false
is_official_build = true
is_component_build = false
skia_enable_optimize_size = false
extra_cflags = [ "/arch:AVX2", "/MT" ]

# --- Backends ---
skia_enable_gpu = true
skia_use_gl = false
skia_use_vulkan = true
skia_use_direct3d = true        
skia_use_directwrite = true

# --- Features ---
skia_enable_svg = true
skia_enable_skottie = true
skia_use_harfbuzz = true
skia_use_sfntly = false
skia_enable_pdf = false

# --- Third Party ---
skia_use_system_libjpeg_turbo = false
skia_use_system_libpng = false
skia_use_system_libwebp = false
skia_use_system_zlib = false
skia_use_system_icu = false
skia_use_system_expat = false